force-app/main/default/objects/Account_Relation__c/Account_Relation__c.object-meta.xml
<CustomObject>
    <label>Account Relation</label>
    <nameField>
        <label>Account Relation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>