force-app/main/default/objects/Account_Relation__c/fields/Ext_Klant__c.field-meta.xml
<CustomField>
    <fullName>Ext_Klant__c</fullName>
    <label>Ext. Klant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>