force-app/main/default/objects/Account_Relation__c/fields/Gemeente__c.field-meta.xml
<CustomField>
    <fullName>Gemeente__c</fullName>
    <label>Gemeente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>