force-app/main/default/objects/Account_Relation__c/fields/HFD__c.field-meta.xml
<CustomField>
    <fullName>HFD__c</fullName>
    <label>HFD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>