force-app/main/default/objects/Account_Relation__c/fields/Huidig__c.field-meta.xml
<CustomField>
    <fullName>Huidig__c</fullName>
    <label>Huidig</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>