force-app/main/default/objects/Account_Relation__c/fields/IM__c.field-meta.xml
<CustomField>
    <fullName>IM__c</fullName>
    <label>I.M.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>