force-app/main/default/objects/Account_Relation__c/fields/Instelnr__c.field-meta.xml
<CustomField>
    <fullName>Instelnr__c</fullName>
    <label>Instelnr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>