force-app/main/default/objects/Account_Relation__c/fields/SAS__c.field-meta.xml
<CustomField>
    <fullName>SAS__c</fullName>
    <label>SAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>