force-app/main/default/objects/Account_Relation__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <label>School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>