force-app/main/default/objects/Account_Relation__c/fields/SG__c.field-meta.xml
<CustomField>
    <fullName>SG__c</fullName>
    <label>SG.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>