force-app/main/default/objects/Account_Relation__c/fields/Straat__c.field-meta.xml
<CustomField>
    <fullName>Straat__c</fullName>
    <label>Straat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>