force-app/main/default/objects/Account_Relation__c/fields/Telefoon__c.field-meta.xml
<CustomField>
    <fullName>Telefoon__c</fullName>
    <label>Telefoon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>